--- a/static/style.css
+++ b/static/style.css
@@ -8,24 +8,20 @@
  body{
      width: 100%;
      height: 100vh;
-     display: flex;
+     /* display: flex; */
      justify-content: center;
      align-items: center;
-     background-color: #0093E9;
-background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+     background-color: #034560;
 
  }
  #container_box {
     width: 80%;
-    margin: 0 auto;
+    margin: auto;
     border: 1px solid #284174;
     padding: 20px;
     border-radius: 16px;
-    background: transparent;
-    box-shadow: 0px 5px 15px rgba(72, 107, 179, 0.5);
-    /* display: flex;
-    flex-direction: row; Ensure it's a vertical column layout */
-    /* align-items: center; */
+    background: rgb(27, 29, 49);
+    box-shadow: 0px 5px 15px rgba(64, 10, 114, 0.683);
     max-height: 95vh; /* Set a maximum height for the container */
     overflow-y: auto; /* Enable vertical scrolling when content exceeds the maximum height */
 }
@@ -51,28 +47,38 @@ input{
      color: #000000;
  }
  input::placeholder{
-     color: #ffffff;
+     color: #988282;
      font-size: 20px;
      opacity: 0.5;
      
  }
  button{
      border: none;
-     width: 65px;
+     width: 110px;
      height: 65px;
      margin: 10px;
-     border-radius: 50%;
+     border-radius: 25%;
      background: rgba(7, 142, 79, 0.541) ;
      color: #f7fafb;
-     font-size: 30px;
-     box-shadow: -8px -8px 15px rgba(242, 242, 242, 0.15);
+     font-size: 20px;
+     box-shadow: -3px -3px 10px rgba(127, 137, 178, 0.242);
      cursor: pointer;
  }
- /* .input-field {
-    width: 100%;
-    margin: 5px 0;
+ nav{
+    position: fixed;
+    background-color: #e79f24f2;;
+
+ }
+.input-field {
+    width: 40%;
+    margin: 6px 3px;
 }
 
 .result {
     margin-left: 10px;
-} */
+    color :white;
+
+}
+label{
+    color: white;
+}
